# MiHaJong

./: .gitignore  .gitmodules  COPYING  IMPORTED.hsp  LICENSE  Makefile.am  NEWS  README  agari.hsp  agariscr.hsp  alias.as  alias.hsp  archive_source.bat  astro.hsp  bignum.hsp  build.bat  chk-13y.hsp  chk-7par.hsp  chk-buda.hsp  chk-cond.hsp  chk-dora.hsp  chk-misc.hsp  chk-mntz.hsp  chk-pnkt.hsp  chk-post.hsp  chk-quad.hsp  chk-seq.hsp  chk-suit.hsp  chk-trpl.hsp  chk-yao.hsp  chkyaku.hsp  clock.hsp  comp_act.hsp  config.hsp  configure.ac  conftxt.hsp  const.as  const.hsp  evstruct.as  function.hsp  (+37 more)
astro/: Makefile.am  astro.h  astro.vcxproj  astro.vcxproj.filters  ecllong.c  julian.c  mphase.c  sunrise.c  ver.rc
auxtools/: Makefile.nmake  auxtools.vcxproj  auxtools.vcxproj.filters  compress.py  compress.rb  makecss.py  md2html.py  rulesyms.rb
common/: bgmid.h  chrono.h  clock.h  condvar.h  datetime.h  discard.h  finally.h  gametbl.h  gametype.h  largenum.h  machihai.h  mutex.h  nmrules.h  safec.h  scrmode.h  seatrank.h  shanten.h  sleep.h  strcode.h  thread.h  tilecode.h  version.h  yakurslt.h
config/: config.cpp  config.rc  config.vcxproj  config.vcxproj.filters  controls.cpp  controls.h  dialog.cpp  dialog.h  resource.h
doc/: Makefile  addyaku.md  history.md  history.txt  license.md  license.txt  manual.css  playing.md  playing.txt  readme.md  readme.txt  script.md  script.txt
graphic/: Makefile.am  button.cpp  button.h  call.cpp  call.h  calltext.cpp  calltext.h  chrwidth.cpp  chrwidth.h  directx.h  editbox.cpp  editbox.h  event.cpp  event.h  except.cpp  except.h  exports.h  extchar.h  filenum.cpp  filenum.h  finscore.cpp  finscore.h  font.cpp  font.h  gametbl.cpp  gametbl.h  geometry.cpp  geometry.h  graphic.h  graphic.rc  graphic.vcxproj  graphic.vcxproj.filters  graphic_2x.rc  graphic_2x.vcxproj  graphic_2x.vcxproj.filters  init.cpp  init.h  input.cpp  input.h  keycode.h  (+29 more)
graphic/data/: cdigits.chr  font.chr  largechr.chr  sdigits.chr  smallchr.chr
graphic/scenes/: call.cpp  call.h  confmenu.cpp  confmenu.h  fps.cpp  fps.h  game.cpp  game.h  proto.cpp  proto.h  result.cpp  result.h  ruleconf.cpp  ruleconf.h  scene_id.h  scenes.h  setting.cpp  setting.h  splash.cpp  splash.h  sysscr.cpp  sysscr.h  table.cpp  table.h  test.cpp  test.h  title.cpp  title.h  waiting.cpp  waiting.h
graphic/scenes/table/: call.cpp  call.h  callval.cpp  chicha.cpp  chicha.h  chktnpai.cpp  chktnpai.h  clock.cpp  clock.h  color.h  gari.cpp  gari.h  naki_id.h  nakibtn.cpp  nakibtn.h  nakihai.cpp  nakihai.h  nakihai0.cpp  nakihai0.h  player.cpp  player.h  richibou.cpp  richibou.h  rndstart.cpp  rndstart.h  showdice.cpp  showdice.h  sutehai.cpp  sutehai.h  tablesub.cpp  tablesub.h  tblsubs.h  tehai.cpp  tehai.h  tehai0.cpp  tehai0.h  tiletip.cpp  tiletip.h  titling.cpp  titling.h  (+2 more)
graphic/scenes/tablesub/: agariscr.cpp  agariscr.h  call.cpp  call.h  callval.cpp  callval.h  chktnpai.cpp  chktnpai.h  player.cpp  player.h  rndstart.cpp  rndstart.h  tablesub.cpp  tablesub.h  tblnorm.h  tblsubs.h  titling.cpp  titling.h
graphic/widgets/: button.cpp  button.h  checkbox.cpp  checkbox.h  editbox.cpp  editbox.h  logwnd.cpp  logwnd.h
haifu/: haifu.css
logger/: build.bat  logger.cpp  (+4 more)
mihajong/: IMPORTED.hsp  Makefile.am  agari.hsp  agariscr.hsp  appinit.hsp  astro.hsp  bignum.hsp  build.bat  chk-13y.hsp  chk-7par.hsp  chk-buda.hsp  chk-cond.hsp  chk-dora.hsp  chk-misc.hsp  chk-mntz.hsp  chk-pnkt.hsp  chk-post.hsp  chk-quad.hsp  chk-seq.hsp  chk-suit.hsp  chk-trpl.hsp  chk-yao.hsp  chkyaku.hsp  clock.hsp  comp_act.hsp  config.hsp  conftxt.hsp  const.as  const.hsp  evstruct.as  evstruct.hsp  function.hsp  fuuro.hsp  haifu.hsp  haipic.hsp  hancnend.hsp  history.txt  iface.hsp  init.as  init.hsp  (+60 more)
mihajong/ai/: ai.lua  default.lua
mihajong/data/: confitem.csv
mihajong/haifu/: haifu.css
mjcore/: Makefile.am  agari.cpp  agari.h  aiscript.cpp  aiscript.h  bgmid.h  build.bat  chat.cpp  chat.h  confitms.h  csv2arry.h  decomp.cpp  decomp.h  discard.cpp  discard.h  dllmain.cpp  dllmain.h  endround.cpp  endround.h  endtype.h  envtbl.cpp  envtbl.h  except.cpp  except.h  filenum.cpp  filenum.h  func.cpp  func.h  fuuro.cpp  fuuro.h  gameloop.cpp  gameloop.h  gametbl.cpp  gametbl.h  haifu.cpp  haifu.h  init.cpp  init.h  largenum.cpp  largenum.h  (+48 more)
mjcore/ai/: aiscript.cpp  aiscript.h  class.h  filesel.cpp  filesel.h  functbl.cpp  functbl.h  gftbl.cpp  riskchk.cpp  search.cpp  search.h
mjcore/conffile/: conffile.cpp  conffile.h
mjcore/data/: confitem.csv  confitem.ini  mentz.dat.lzma  prefitem.csv  prefitem.ini  rankval.csv
mjcore/lua/: README
mjcore/lzma/: README
mjcore/reader/: csv2arry.cpp  csv2arry.h  ini2map.cpp  ini2map.h  readrsrc.cpp  readrsrc.h
mjcore/yaku/: catalog.cpp  catalog.h  suittbl.cpp  yaku.cpp  yaku.h  yakurslt.cpp  yakurslt.h  yk_tools.cpp  yk_tools.h  ykclass.cpp  ykclass.h  yvalue.h
mjcore/yaku/catalog/: context.cpp  dora.cpp  irreg.cpp  isshoku.h  misc.cpp  pinhu.cpp  post.cpp  quad.cpp  sequence.cpp  shisanbd.cpp  suit.cpp  triplet1.cpp  triplet2.cpp  triplet3.cpp  yaojiu.cpp
mjcoregb/: Makefile.am  agari.cpp  agari.h  ai  chat.cpp  chat.h  confitms.h  data  decomp.cpp  decomp.h  discard.cpp  discard.h  dllmain.cpp  dllmain.h  endround.cpp  endround.h  endtype.h  envtbl.cpp  envtbl.h  except.h  filenum.cpp  filenum.h  func.cpp  func.h  fuuro.cpp  fuuro.h  gameloop.cpp  gameloop.h  gametbl.cpp  gametbl.h  haifu.cpp  haifu.h  init.cpp  init.h  largenum.cpp  largenum.h  logging.cpp  logging.h  lua  lzma  (+34 more)
socket/: Makefile.am  class.cpp  class.h  client.cpp  client.h  except.h  logger.cpp  logger.h  protocol.h  server.cpp  server.h  socket.cpp  socket.h  socket.vcxproj  socket.vcxproj.filters  ver.rc
sound/: Makefile.am  OggVorbis.txt  audioobj.h  libogg.patch  libvorbis.patch  logger.cpp  logger.h  midi.cpp  midi.h  resource.h  snddata.cpp  snddata.h  sound.cpp  sound.h  sound.vcxproj  sound.vcxproj.filters  soundobj.cpp  soundobj.h  ver.rc  vorbis.cpp  vorbis.h  wave.cpp  wave.h
sound/GuruGuruSMF/: README
sound/libogg/: Readme.txt
sound/libvorbis/: Readme.txt
(+85 files in other folders)
